--- a/MyArchive/MyArchive/Base.lproj/Main.storyboard
+++ b/MyArchive/MyArchive/Base.lproj/Main.storyboard
@@ -288,12 +288,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="zgm-Zb-D9G">
-                                <rect key="frame" x="0.0" y="59" width="393" height="793"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="zgm-Zb-D9G">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="787" id="n92-3p-pj7" customClass="DetailCell" customModule="MyArchive" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DetailCell" rowHeight="787" id="n92-3p-pj7" customClass="DetailCell" customModule="MyArchive" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="393" height="787"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="n92-3p-pj7" id="ajt-E1-pKY">
@@ -407,14 +406,34 @@
                                                 <constraint firstItem="VY2-ss-qcZ" firstAttribute="leading" secondItem="ajt-E1-pKY" secondAttribute="leadingMargin" constant="15" id="h8m-Dk-apc"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="addLibraryImageView" destination="UTK-jh-hhR" id="60a-9Q-3sp"/>
+                                            <outlet property="coverImageView" destination="adE-fp-9k0" id="NRv-UY-DTN"/>
+                                            <outlet property="descriptionLabel" destination="oDx-nJ-lSl" id="B9J-9F-cGP"/>
+                                            <outlet property="genre1Label" destination="Hoi-Uc-asQ" id="L8P-G8-rN1"/>
+                                            <outlet property="genre2Label" destination="1Zu-Bk-pRA" id="DC8-xk-oE0"/>
+                                            <outlet property="genre3Label" destination="xDc-a9-hpF" id="8Fm-C8-XmX"/>
+                                            <outlet property="readButton" destination="OSG-12-Pfv" id="gjN-fs-CKN"/>
+                                            <outlet property="titleLabel" destination="T4D-eZ-wum" id="Vc8-YH-5ay"/>
+                                            <outlet property="usernameLabel" destination="Nsf-Bk-Cxi" id="9xd-3I-1QK"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Ua0-Kv-n4A"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="zgm-Zb-D9G" firstAttribute="top" secondItem="xIe-G0-pc5" secondAttribute="top" id="2sh-H4-XGp"/>
+                            <constraint firstItem="zgm-Zb-D9G" firstAttribute="leading" secondItem="Ua0-Kv-n4A" secondAttribute="leading" id="L2r-Wr-Dhl"/>
+                            <constraint firstItem="zgm-Zb-D9G" firstAttribute="trailing" secondItem="Ua0-Kv-n4A" secondAttribute="trailing" id="Udx-YP-Ldc"/>
+                            <constraint firstAttribute="bottom" secondItem="zgm-Zb-D9G" secondAttribute="bottom" id="jhE-kK-dIa"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="JuM-LU-Dd9"/>
+                    <connections>
+                        <outlet property="tableView" destination="zgm-Zb-D9G" id="IDV-tT-Y6a"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mn8-wr-KEs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
