--- a/MyArchive/MyArchive/Base.lproj/Main.storyboard
+++ b/MyArchive/MyArchive/Base.lproj/Main.storyboard
@@ -427,13 +427,48 @@
                     <view key="view" contentMode="scaleToFill" id="rqE-fg-ARR">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="65" translatesAutoresizingMaskIntoConstraints="NO" id="cpc-lN-Vbe" userLabel="Main SV">
+                                <rect key="frame" x="60" y="132" width="272" height="685.66666666666663"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chapter" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XAf-1a-chl">
+                                        <rect key="frame" x="87.333333333333343" y="0.0" width="97.666666666666657" height="33.666666666666664"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="P5M-u7-Fee">
+                                        <rect key="frame" x="0.0" y="98.666666666666629" width="272" height="587.00000000000011"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="587" id="BgM-wM-KzI"/>
+                                            <constraint firstAttribute="width" constant="272" id="zDq-k9-qsi"/>
+                                        </constraints>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <color key="textColor" systemColor="labelColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="685.66999999999996" id="Ywb-of-WF7"/>
+                                    <constraint firstAttribute="width" constant="272" id="agC-V9-2Sr"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="J6b-2l-7lB"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="J6b-2l-7lB" firstAttribute="trailing" secondItem="cpc-lN-Vbe" secondAttribute="trailing" constant="60" id="BvO-2X-EZh"/>
+                            <constraint firstItem="J6b-2l-7lB" firstAttribute="bottom" secondItem="cpc-lN-Vbe" secondAttribute="bottom" constant="0.33000000000000002" id="fpe-N5-DDd"/>
+                            <constraint firstItem="cpc-lN-Vbe" firstAttribute="top" secondItem="J6b-2l-7lB" secondAttribute="top" constant="73" id="gsH-wB-jNl"/>
+                            <constraint firstItem="cpc-lN-Vbe" firstAttribute="leading" secondItem="J6b-2l-7lB" secondAttribute="leading" constant="60" id="mIp-9Y-0kp"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EBk-Eb-Z3W" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2379" y="663"/>
+            <point key="canvasLocation" x="2377.8625954198474" y="661.97183098591552"/>
         </scene>
         <!--Search View Controller-->
         <scene sceneID="Vfo-dt-D7L">
@@ -880,6 +915,9 @@
         <image name="house.fill" catalog="system" width="128" height="104"/>
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
         <image name="plus.circle.fill" catalog="system" width="128" height="123"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
