--- a/MyArchive/MyArchive/Base.lproj/Main.storyboard
+++ b/MyArchive/MyArchive/Base.lproj/Main.storyboard
@@ -531,28 +531,28 @@
                                                             </constraints>
                                                         </imageView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="M2w-a2-bDC" userLabel="Info Stack View">
-                                                            <rect key="frame" x="123" y="0.0" width="230" height="68.333333333333329"/>
+                                                            <rect key="frame" x="123" y="0.0" width="230" height="78.333333333333329"/>
                                                             <subviews>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="rGZ-cs-bhd" userLabel="Title">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="89" height="40"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="99" height="50"/>
                                                                     <subviews>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E7M-y7-KNS">
-                                                                            <rect key="frame" x="0.0" y="6.9999999999999982" width="41" height="26.333333333333329"/>
+                                                                            <rect key="frame" x="0.0" y="11.999999999999998" width="41" height="26.333333333333329"/>
                                                                             <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                                                             <nil key="textColor"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
                                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="book.pages.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="x41-er-kCm">
-                                                                            <rect key="frame" x="49" y="-1.6666666666666679" width="40" height="42.666666666666671"/>
+                                                                            <rect key="frame" x="49" y="-1.6666666666666679" width="50" height="52.666666666666671"/>
                                                                             <constraints>
-                                                                                <constraint firstAttribute="width" constant="40" id="9Ow-ib-t4U"/>
-                                                                                <constraint firstAttribute="height" constant="40" id="aVz-qE-z0U"/>
+                                                                                <constraint firstAttribute="width" constant="50" id="9Ow-ib-t4U"/>
+                                                                                <constraint firstAttribute="height" constant="50" id="aVz-qE-z0U"/>
                                                                             </constraints>
                                                                         </imageView>
                                                                     </subviews>
                                                                 </stackView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KFF-cy-GoW">
-                                                                    <rect key="frame" x="0.0" y="48" width="87.333333333333329" height="20.333333333333329"/>
+                                                                    <rect key="frame" x="0.0" y="58.000000000000007" width="87.333333333333329" height="20.333333333333336"/>
                                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -569,6 +569,12 @@
                                                 <constraint firstItem="vE6-RY-h3S" firstAttribute="top" secondItem="Wo0-MM-fmi" secondAttribute="top" constant="20" id="scn-xZ-AKN"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="coverImageView" destination="3Kb-Mi-CT3" id="ONy-rs-7oq"/>
+                                            <outlet property="descriptionLabel" destination="KFF-cy-GoW" id="qei-jc-dSf"/>
+                                            <outlet property="isPublishedImageView" destination="x41-er-kCm" id="Nqo-by-uZ1"/>
+                                            <outlet property="titleLabel" destination="E7M-y7-KNS" id="GfH-Es-oLT"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
